# Data-Pilot-2.0

./: .gitignore  .gitlab-ci.yml  .sqlfluff  CLAUDE.md  DATAPILOT_CONTEXT.md  DataPilot_New TaskList 2.docx  DataPilot_TaskList v2.md  Dockerfile  README.md  TASK_LIST.md  bootstrap.py  claude-code-tasklist.md  datapilot.example.yaml  datapilot_feedback.json  datapilot_graph.json  datapilot_report.html  datapilot_report.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: analyzer.py  datapilot.py  graph.py  parser.py  reporter.py
agent/web/: app.py
ai-governance/: .env.example  .eslintrc.json  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
ai-governance/docs/: API.md
datapilot/: __init__.py  __main__.py  cli.py
datapilot/agents/: __init__.py  analyst.py  anomaly.py  router.py  suggestor.py
datapilot/api/: __init__.py  routes.py
datapilot/core/: __init__.py  config.py  feedback.py  graph.py  parser.py  pipeline.py  remediator.py  reporter.py
datapilot/exporters/: __init__.py  formats.py
datapilot/gateway/: __init__.py  auth.py  guardrails.py  keyvault.py  models.py  proxy.py  quota.py  routes.py  store.py
datapilot/integrations/: __init__.py  base.py
datapilot/web/: __init__.py  app.py
deploy/k8s/: datapilot-deployment.yaml
docs/: ARCHITECTURE.md  PLATFORM_DESIGN.md  README.md  REFACTORING_PLAN.md  SYSTEM_REDESIGN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
scripts/: answer_key.py  validate_env.py
shopmesh_dbt/: dbt_project.yml  profiles.yml  query_history.json
shopmesh_dbt/.datapilot_trash/: analytics_cac_analysis.yml  analytics_churn_risk.sql  analytics_legacy_kpis.yml  analytics_seller_dashboard_v1.sql  analytics_seller_dashboard_v2.yml  core_coupon_analysis.sql  core_coupon_analysis.yml  core_experimental_ltv.sql  core_experimental_ltv.yml  core_inventory_legacy.sql  core_seller_metrics.sql  raw_mobile_sessions.sql  raw_shopify_gift_cards.sql  src_erp_products.sql  src_erp_warehouses.sql
shopmesh_dbt/macros/: cents_to_dollars.sql  is_valid_email.sql  not_null_proportion.sql  safe_divide.sql  surrogate_key.sql  union_relations.sql
shopmesh_dbt/seeds/: currency_rates.csv  market_regions.csv  plan_definitions.csv  (+1 more)
(+354 files in other folders)
